--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ libloading = { version = "0.6.0", optional = true }
 once_cell = "1.10.0"
 smallvec = "1.6.1"
 
+llvm_archive_writer = { path = "./llvm_archive_writer" }
+
 [patch.crates-io]
 # Uncomment to use local checkout of cranelift
 #cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
