--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,3 +23,30 @@ task:
     - export COMPILE_RUNS=2
     - export RUN_RUNS=2
     - ./test.sh
+
+task:
+  name: macOS (AArch64)
+  macos_instance:
+    image: ghcr.io/cirruslabs/macos-monterey-base:latest
+  setup_rust_script:
+    - curl https://sh.rustup.rs -sSf --output rustup.sh
+    - sh rustup.sh --default-toolchain none -y --profile=minimal
+  cargo_bin_cache:
+    folder: ~/.cargo/bin
+  target_cache:
+    folder: target
+  prepare_script:
+    - uname -a
+    - . $HOME/.cargo/env
+    - git config --global user.email "user@example.com"
+    - git config --global user.name "User"
+    - ./y.rs prepare
+  test_script:
+    - . $HOME/.cargo/env
+    - # Enable backtraces for easier debugging
+    - export RUST_BACKTRACE=1
+    - # Reduce amount of benchmark runs as they are slow
+    - export COMPILE_RUNS=2
+    - export RUN_RUNS=2
+    - ./test.sh
+
