--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ crate-type = ["dylib"]
 
 [dependencies]
 # These have to be in sync with each other
-cranelift-codegen = { version = "0.94", features = ["unwind", "all-arch"] }
-cranelift-frontend = { version = "0.94" }
-cranelift-module = { version = "0.94" }
-cranelift-native = { version = "0.94" }
-cranelift-jit = { version = "0.94", optional = true }
-cranelift-object = { version = "0.94" }
+cranelift-codegen = { version = "0.95", features = ["unwind", "all-arch"] }
+cranelift-frontend = { version = "0.95" }
+cranelift-module = { version = "0.95" }
+cranelift-native = { version = "0.95" }
+cranelift-jit = { version = "0.95", optional = true }
+cranelift-object = { version = "0.95" }
 target-lexicon = "0.12.0"
 gimli = { version = "0.27.2", default-features = false, features = ["write"]}
 object = { version = "0.30.3", default-features = false, features = ["std", "read_core", "write", "archive", "coff", "elf", "macho", "pe"] }
@@ -32,12 +32,12 @@ smallvec = "1.8.1"
 
 [patch.crates-io]
 # Uncomment to use local checkout of cranelift
-#cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
-#cranelift-frontend = { path = "../wasmtime/cranelift/frontend" }
-#cranelift-module = { path = "../wasmtime/cranelift/module" }
-#cranelift-native = { path = "../wasmtime/cranelift/native" }
-#cranelift-jit = { path = "../wasmtime/cranelift/jit" }
-#cranelift-object = { path = "../wasmtime/cranelift/object" }
+cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
+cranelift-frontend = { path = "../wasmtime/cranelift/frontend" }
+cranelift-module = { path = "../wasmtime/cranelift/module" }
+cranelift-native = { path = "../wasmtime/cranelift/native" }
+cranelift-jit = { path = "../wasmtime/cranelift/jit" }
+cranelift-object = { path = "../wasmtime/cranelift/object" }
 
 #gimli = { path = "../" }
 
